[package]
name = "rubiks"
version = "0.1.0"
authors = ["Jake Carrington <jake.ethan.carrington@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getch = "0.2.1"
dirs = "2.0.2"

[build-dependencies]
dirs = "2.0.2"
