[package]
name = "puzzle_cube"
description = "Simple command line puzzle cube game"
license = "MIT"
version = "0.1.2"
authors = ["Jake Carrington <jake.ethan.carrington@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
getch = "0.2.1"
dirs = "2.0.2"
termcolor = "1.1.0"

[build-dependencies]
dirs = "2.0.2"
